--- a/src/i18n/translation.en.json
+++ b/src/i18n/translation.en.json
@@ -8,6 +8,7 @@
   "toolbar.galleryMcCloudAtNight": "McCloud at Night",
   "toolbar.gallerySpooky": "Spooky",
   "toolbar.galleryPanoramas": "Panoramas",
+  "toolbar.galleryHalloween": "Halloween",
   "toolbar.tooltipFlickr": "Pat's Flickr",
   "toolbar.tooltipInstagram": "Pat's Instagram",
   "toolbar.tooltipSettings": "Settings",
