--- a/src/i18n/translation.es.json
+++ b/src/i18n/translation.es.json
@@ -8,6 +8,7 @@
   "toolbar.galleryMcCloudAtNight": "McCloud de noche",
   "toolbar.gallerySpooky": "Escalofriante",
   "toolbar.galleryPanoramas": "Panorámicas",
+  "toolbar.galleryHalloween": "Halloween",
   "toolbar.tooltipFlickr": "Flickr",
   "toolbar.tooltipInstagram": "Instagram",
   "toolbar.tooltipSettings": "Ajustes",
