--- a/src/i18n/translation.it.json
+++ b/src/i18n/translation.it.json
@@ -8,6 +8,7 @@
   "toolbar.galleryMcCloudAtNight": "McCloud di notte",
   "toolbar.gallerySpooky": "Sinistro",
   "toolbar.galleryPanoramas": "Panorami",
+  "toolbar.galleryHalloween": "Halloween",
   "toolbar.tooltipFlickr": "Flickr",
   "toolbar.tooltipInstagram": "Instagram",
   "toolbar.tooltipSettings": "Impostazioni",
