--- a/src/i18n/translation.ru.json
+++ b/src/i18n/translation.ru.json
@@ -8,6 +8,7 @@
   "toolbar.galleryMcCloudAtNight": "МакКлауд ночью",
   "toolbar.gallerySpooky": "Жуткий",
   "toolbar.galleryPanoramas": "Панорамы",
+  "toolbar.galleryHalloween": "Halloween",
   "toolbar.tooltipFlickr": "Flickr",
   "toolbar.tooltipInstagram": "Instagram",
   "toolbar.tooltipSettings": "Настройки",
