Adjustments and McCloud rewrite

--- a/src/i18n/translation.en.json
+++ b/src/i18n/translation.en.json
@@ -6,7 +6,7 @@
   "toolbar.gallerySunrisesAndSunsets": "Sunrises and Sunsets",
   "toolbar.galleryInteractive": "Interactive",
   "toolbar.galleryMcCloudAtNight": "McCloud at Night",
-  "toolbar.gallerySpooky": "Spooky",
+  "toolbar.gallerySpooky": "Dark",
   "toolbar.galleryPanoramas": "Panoramas",
   "toolbar.galleryHalloween": "Halloween",
   "toolbar.tooltipFlickr": "Pat's Flickr",
