--- a/src/i18n/translation.en.json
+++ b/src/i18n/translation.en.json
@@ -9,6 +9,7 @@
   "toolbar.gallerySpooky": "Dark",
   "toolbar.galleryPanoramas": "Panoramas",
   "toolbar.galleryHalloween": "Halloween",
+  "toolbar.galleryChristmas": "Christmas",
   "toolbar.tooltipFlickr": "Pat's Flickr",
   "toolbar.tooltipInstagram": "Pat's Instagram",
   "toolbar.tooltipSettings": "Settings",
