--- a/src/i18n/translation.es.json
+++ b/src/i18n/translation.es.json
@@ -9,6 +9,7 @@
   "toolbar.gallerySpooky": "Escalofriante",
   "toolbar.galleryPanoramas": "Panorámicas",
   "toolbar.galleryHalloween": "Halloween",
+  "toolbar.galleryChristmas": "Navidad",
   "toolbar.tooltipFlickr": "Flickr",
   "toolbar.tooltipInstagram": "Instagram",
   "toolbar.tooltipSettings": "Ajustes",
