--- a/src/i18n/translation.it.json
+++ b/src/i18n/translation.it.json
@@ -9,6 +9,7 @@
   "toolbar.gallerySpooky": "Sinistro",
   "toolbar.galleryPanoramas": "Panorami",
   "toolbar.galleryHalloween": "Halloween",
+  "toolbar.galleryChristmas": "Natale",
   "toolbar.tooltipFlickr": "Flickr",
   "toolbar.tooltipInstagram": "Instagram",
   "toolbar.tooltipSettings": "Impostazioni",
