--- a/src/i18n/translation.ru.json
+++ b/src/i18n/translation.ru.json
@@ -9,6 +9,7 @@
   "toolbar.gallerySpooky": "Жуткий",
   "toolbar.galleryPanoramas": "Панорамы",
   "toolbar.galleryHalloween": "Halloween",
+  "toolbar.galleryChristmas": "Рождество",
   "toolbar.tooltipFlickr": "Flickr",
   "toolbar.tooltipInstagram": "Instagram",
   "toolbar.tooltipSettings": "Настройки",
